# kalikote-bansa-samaj

./: .gitignore  db.sqlite3  docker-compose.yml  manage.py  requirements.txt
adminuses/: apps.py  context_processor.py  form.py  models.py  permissions.py  urls.py  views.py
core/: admin.py  models.py  urls.py  views.py
gallery/: admin.py  form.py  models.py  serializers.py  urls.py  views.py
index/: views.py
kalikote_bansa_samaj/: asgi.py  settings.py  urls.py  wsgi.py
kalikotebansa/: asgi.py  settings.py  urls.py  wsgi.py
languagetrans/: apps.py  urls.py  views.py
src/: pyproject.toml
src/app/adminuses/: apps.py  form.py  models.py  urls.py  views.py
src/app/adminuses/migrations/: 0001_initial.py
src/app/gallery/: models.py  urls.py  views.py
src/app/gallery/migrations/: 0001_initial.py
src/app/index/: views.py
src/app/management/management/commands/: create_schemas.py
src/kalikote_bansa_samaj/: .env  settings.py  urls.py
src/static/css/: base.css  contact.css  default.css  manage_notice.css  sadasya_form.css
src/templates/: add_photo.html  add_video.html  base.html  confirm_delete.html  dashboard.html  edit_slide.html  home.html  index.html  manage_members.html  manage_notice.html  manage_photos.html  manage_videos.html  membership_list.html  messages.html  sadasya_form.html  sahayog.html  samparka.html
templates/: add_members.html  add_slides.html  addphoto.html  addvideo.html  base.html  baseuser.html  change_email.html  change_logo.html  change_password.html  create_superuser.html  edit_notice.html  edit_photo.html  edit_video.html  (+24 more)
(+41 files in other folders)
