[project]
name = "kalikote-bansa-samaj"
version = "0.1.0"
description = ""
authors = [
    {name = "shishir"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "pillow (>=12.1.1,<13.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
